[tool.poetry]
name = "medtimeline"
version = "0.1.0"
description = ""
authors = ["Louise Rigny <lr22@ic.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
requests = "^2.31.0"
datetime = "^5.2"
chardet = "^5.2.0"
pytest = "^7.4.2"
numpy = "^1.26.1"
pandas = "^2.1.1"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
